--- a/spring-playground/build.gradle
+++ b/spring-playground/build.gradle
@@ -33,19 +33,21 @@ dependencies {
     compile('org.springframework.boot.experimental:spring-boot-starter-web-reactive') {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     }
-    compile "io.projectreactor.ipc:reactor-netty"
+//    compile "io.projectreactor.ipc:reactor-netty"
 
     compile group: 'io.vertx', name: 'vertx-core', version: '3.3.3'
     compile group: 'io.vertx', name: 'vertx-web', version: '3.3.3'
 //    compile group: 'io.vertx', name: 'vertx-reactive-streams', version: '3.3.3'
 
-    compile group: 'io.reactivex', name: 'rxnetty-http', version: '0.5.2-RC1'
-    compile group: 'io.reactivex', name: 'rxjava-reactive-streams', version: '1.2.1'
+//    compile group: 'io.reactivex', name: 'rxnetty-http', version: '0.5.2-RC1'
+//    compile group: 'io.reactivex', name: 'rxjava-reactive-streams', version: '1.2.1'
 
     compile "org.freemarker:freemarker"
 //    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core'
 //    compile group: 'org.springframework', name: 'spring-web-reactive'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind'
+
+    compile "javax.el:javax.el-api:3.0.0"
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
