--- a/spring-playground/build.gradle
+++ b/spring-playground/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     compile('org.springframework.boot.experimental:spring-boot-starter-web-reactive') {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     }
-//    compile "io.projectreactor.ipc:reactor-netty"
+    compile "io.projectreactor.ipc:reactor-netty"
 
     compile group: 'io.vertx', name: 'vertx-core', version: '3.3.3'
     compile group: 'io.vertx', name: 'vertx-web', version: '3.3.3'
