--- a/spring-playground/build.gradle
+++ b/spring-playground/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 
     compile group: 'io.vertx', name: 'vertx-core', version: '3.3.3'
     compile group: 'io.vertx', name: 'vertx-web', version: '3.3.3'
-//    compile group: 'io.vertx', name: 'vertx-reactive-streams', version: '3.3.3'
+    compile group: 'io.vertx', name: 'vertx-reactive-streams', version: '3.3.3'
 
 //    compile group: 'io.reactivex', name: 'rxnetty-http', version: '0.5.2-RC1'
 //    compile group: 'io.reactivex', name: 'rxjava-reactive-streams', version: '1.2.1'
