--- a/raw-java/build.gradle
+++ b/raw-java/build.gradle
@@ -6,13 +6,18 @@ apply plugin: 'java'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+	mavenCentral()
+	maven { url "https://repo.spring.io/snapshot" }
+	maven { url "https://repo.spring.io/milestone" }
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile group: 'io.vertx', name: 'vertx-core', version: '3.3.3'
-    compile group: 'io.vertx', name: 'vertx-web', version: '3.3.3'
-    compile group: 'io.vertx', name: 'vertx-rx-java', version: '3.3.3'
+	testCompile group: 'junit', name: 'junit', version: '4.11'
+	compile group: 'io.vertx', name: 'vertx-core', version: '3.3.3'
+	compile group: 'io.vertx', name: 'vertx-web', version: '3.3.3'
+	compile group: 'io.vertx', name: 'vertx-rx-java', version: '3.3.3'
+
+	compile('io.projectreactor.kafka:reactor-kafka:1.0.0.BUILD-SNAPSHOT')
+	compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.22'
 
 }
