--- a/learning-akka/build.gradle
+++ b/learning-akka/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 
     compile "com.typesafe.akka:akka-actor_2.11:$akka_version"
     compile "com.typesafe.akka:akka-testkit_2.11:$akka_version"
+    compile "com.typesafe.akka:akka-remote_2.11:$akka_version"
     compile "org.scala-lang.modules:scala-java8-compat_2.11:0.8.0"
 
     testCompile "junit:junit:4.12"
