--- a/learning-akka/build.gradle
+++ b/learning-akka/build.gradle
@@ -2,51 +2,54 @@ group 'learning-akka'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext {
-        kotlin_version = '1.1-M04'
-        scala_version = "2.11.8"
-        akka_version = "2.4.16"
-    }
+	ext {
+		kotlin_version = '1.1-M04'
+		scala_version = "2.11.8"
+		akka_version = "2.4.16"
+	}
 
-    repositories {
-        maven { url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1' }
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+	repositories {
+		maven { url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1' }
+		mavenCentral()
+	}
+	dependencies {
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+	}
 }
 
-apply plugin: 'java'
-apply plugin: 'kotlin'
-apply plugin: 'scala'
+subprojects {
 
-sourceCompatibility = 1.8
+	apply plugin: 'java'
+	apply plugin: 'kotlin'
+	apply plugin: 'scala'
 
-configurations.all {
-    resolutionStrategy.force "org.scala-lang:scala-library:$scala_version"
-}
+	sourceCompatibility = 1.8
 
-repositories {
-    maven { url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1' }
-    maven { url "http://dl.bintray.com/jetbrains/spek" }
-    mavenCentral()
-}
+	configurations.all {
+		resolutionStrategy.force "org.scala-lang:scala-library:$scala_version"
+	}
 
-dependencies {
-    compile "org.scala-lang:scala-library:$scala_version"
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+	repositories {
+		maven { url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1' }
+		maven { url "http://dl.bintray.com/jetbrains/spek" }
+		mavenCentral()
+	}
 
-    compile "com.typesafe.akka:akka-actor_2.11:$akka_version"
-    compile "com.typesafe.akka:akka-testkit_2.11:$akka_version"
-    compile "com.typesafe.akka:akka-remote_2.11:$akka_version"
-    compile "org.scala-lang.modules:scala-java8-compat_2.11:0.8.0"
+	dependencies {
+		compile "org.scala-lang:scala-library:$scala_version"
+		compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+		compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
-    testCompile "junit:junit:4.12"
-    testCompile "org.scalatest:scalatest_2.11:3.0.1"
-    testCompile "org.jetbrains.spek:spek-api:1.1.0-beta3"
-    testCompile "org.jetbrains.spek:spek-junit-platform-engine:1.1.0-beta3"
-    testCompile "org.jetbrains.kotlin:kotlin-test:1.1-M04"
-    testCompile "org.junit.platform:junit-platform-runner:1.0.0-M3"
+		compile "com.typesafe.akka:akka-actor_2.11:$akka_version"
+		compile "com.typesafe.akka:akka-testkit_2.11:$akka_version"
+		compile "com.typesafe.akka:akka-remote_2.11:$akka_version"
+		compile "org.scala-lang.modules:scala-java8-compat_2.11:0.8.0"
+
+		testCompile "junit:junit:4.12"
+		testCompile "org.scalatest:scalatest_2.11:3.0.1"
+		testCompile "org.jetbrains.spek:spek-api:1.1.0-beta3"
+		testCompile "org.jetbrains.spek:spek-junit-platform-engine:1.1.0-beta3"
+		testCompile "org.jetbrains.kotlin:kotlin-test:1.1-M04"
+		testCompile "org.junit.platform:junit-platform-runner:1.0.0-M3"
+	}
 }
