--- a/spring-playground/src/main/resources/application.properties
+++ b/spring-playground/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-logging.level.org:DEBUG
-logging.level.io:DEBUG
+#logging.level.org=DEBUG
+#logging.level.io=DEBUG
+#logging.level.spring.reactive=DEBUG
+#spring.reactor.stacktrace-mode.enabled=false
