--- a/learning-akka/build.gradle
+++ b/learning-akka/build.gradle
@@ -46,7 +46,7 @@ subprojects {
 		compile "org.scala-lang.modules:scala-java8-compat_2.11:0.8.0"
 
 		testCompile "junit:junit:4.12"
-		testCompile "org.scalatest:scalatest_2.11:3.0.1"
+		compile "org.scalatest:scalatest_2.11:3.0.1"
 		testCompile "org.jetbrains.spek:spek-api:1.1.0-beta3"
 		testCompile "org.jetbrains.spek:spek-junit-platform-engine:1.1.0-beta3"
 		testCompile "org.jetbrains.kotlin:kotlin-test:1.1-M04"
