--- a/raw-java/build.gradle
+++ b/raw-java/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	compile group: 'io.vertx', name: 'vertx-rx-java', version: '3.3.3'
 
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.5.0.RELEASE'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '1.5.0.RELEASE'
 
 	compile('io.projectreactor.kafka:reactor-kafka:1.0.0.BUILD-SNAPSHOT')
 //	compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.22'
