--- a/spring-playground/build.gradle
+++ b/spring-playground/build.gradle
@@ -30,11 +30,7 @@ repositories {
 }
 
 dependencies {
-	compile('org.springframework.boot.experimental:spring-boot-starter-web-reactive') {
-		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
-	}
-	compile "io.undertow:undertow-core"
-	compile "io.projectreactor.ipc:reactor-netty"
+    compile "org.springframework.boot:spring-boot-starter-webflux"
 
 	compile group: 'io.vertx', name: 'vertx-core', version: '3.3.3'
 	compile group: 'io.vertx', name: 'vertx-web', version: '3.3.3'
@@ -52,10 +48,4 @@ dependencies {
 	compile "javax.el:javax.el-api:3.0.0"
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-}
-
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.boot.experimental:spring-boot-dependencies-web-reactive:0.1.0.BUILD-SNAPSHOT"
-	}
 }
