--- a/spring-playground/build.gradle
+++ b/spring-playground/build.gradle
@@ -10,42 +10,47 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 buildscript {
-	ext {
-		springBootVersion = '2.0.0.BUILD-SNAPSHOT'
-	}
-	repositories {
-		mavenCentral()
-		maven { url "https://repo.spring.io/snapshot" }
-		maven { url "https://repo.spring.io/milestone" }
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '2.0.0.BUILD-SNAPSHOT'
+    }
+    repositories {
+        mavenCentral()
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
 repositories {
-	mavenCentral()
-	maven { url "https://repo.spring.io/snapshot" }
-	maven { url "https://repo.spring.io/milestone" }
+    mavenCentral()
+    maven { url "https://repo.spring.io/snapshot" }
+    maven { url "https://repo.spring.io/milestone" }
 }
 
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-webflux"
+    compile("org.springframework.boot:spring-boot-starter-webflux")
+//            {
+//                exclude group: "io.projectreactor.ipc", module: "reactor-netty"
+//            }
+//    compile "io.undertow:undertow-core"
 
-	compile group: 'io.vertx', name: 'vertx-core', version: '3.3.3'
-	compile group: 'io.vertx', name: 'vertx-web', version: '3.3.3'
-	compile group: 'io.vertx', name: 'vertx-reactive-streams', version: '3.3.3'
-	compile group: 'io.vertx', name: 'vertx-rx-java', version: '3.3.3'
 
-	compile group: 'io.reactivex', name: 'rxnetty-http', version: '0.5.2-RC1'
-	compile group: 'io.reactivex', name: 'rxjava-reactive-streams', version: '1.2.1'
+    compile group: 'io.vertx', name: 'vertx-core', version: '3.3.3'
+    compile group: 'io.vertx', name: 'vertx-web', version: '3.3.3'
+    compile group: 'io.vertx', name: 'vertx-reactive-streams', version: '3.3.3'
+    compile group: 'io.vertx', name: 'vertx-rx-java', version: '3.3.3'
 
-	compile "org.freemarker:freemarker"
+//    compile group: 'io.reactivex', name: 'rxnetty-http', version: '0.5.2-RC1'
+//    compile group: 'io.reactivex', name: 'rxjava-reactive-streams', version: '1.2.1'
+
+    compile "org.freemarker:freemarker"
 //    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core'
 //    compile group: 'org.springframework', name: 'spring-web-reactive'
-	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind'
 
-	compile "javax.el:javax.el-api:3.0.0"
+    compile "javax.el:javax.el-api:3.0.0"
 
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
