--- a/spring-playground/src/main/resources/application.properties
+++ b/spring-playground/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 #logging.level.io=DEBUG
 #logging.level.spring.reactive=DEBUG
 #spring.reactor.stacktrace-mode.enabled=false
+spring.devtools.restart.enabled=false
